made changes to server jar startup flags